[gd_scene load_steps=2 format=3 uid="uid://u5kn3udonqiu"]

[ext_resource type="Script" uid="uid://ud20b4k1buyv" path="res://NewUI/PlayerAttackUI/unit_container.gd" id="1_ev526"]

[node name="UnitContainer" type="VBoxContainer"]
script = ExtResource("1_ev526")

[node name="UnitNameLabel" type="Label" parent="."]
layout_mode = 2
text = "Simple Mech"

[node name="SelectButton" type="Button" parent="."]
layout_mode = 2
text = "Select"
